--- a/ubuntu1404/lnmp5/mysite.conf
+++ b/ubuntu1404/lnmp5/mysite.conf
@@ -11,9 +11,11 @@ server {
 
     # 开启PHP支持
     location ~ \.php {
-        fastcgi_split_path_info ^(.+\.php)(.*)$;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        include       fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass  unix:/var/run/php5-fpm.sock;
         fastcgi_index index.php;
+        fastcgi_split_path_info ^(.+\.php)(.*)$;
         fastcgi_param PATH_INFO $fastcgi_path_info;
 
         # 环境变量
@@ -22,9 +24,6 @@ server {
         fastcgi_param LY_DB_NAME 'mysite';
         fastcgi_param LY_DB_USER 'test';
         fastcgi_param LY_DB_PWD 'test';
-
-        # 加载Nginx默认"服务器环境变量"配置
-        include fastcgi_params;
     }
 
 
